--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.002   2019-02-02 (PERLANCAR)
+
+	- [bugfix] Forgot to require module before use.
+
+
 0.001   2018-02-25 (PERLANCAR)
 
         - First release.
