--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.008   2020-06-11  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [doc] Update mentioned spec module Color::Theme -> ColorTheme.
+
+
 0.007   2020-06-09  Released-By: PERLANCAR; Urgency: medium
 
 	- [incompatible] [cli show-color-theme-swatch] Accept theme module
