--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.009   2020-06-19  Released-By: PERLANCAR; Urgency: medium
+
+	- [cli list-color-theme-modules] Now only show ColorTheme::*
+	  modules (no longer shows *::ColorTheme::* modules).
+
+
 0.008   2020-06-11  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
