--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.010   2021-08-01  Released-By: PERLANCAR; Urgency: medium
+
+	[cli show-color-theme-swatch]
+
+        - Support ANSI codes in color item.
+
+        - Some fixes.
+
+
 0.009   2020-06-19  Released-By: PERLANCAR; Urgency: medium
 
 	- [cli list-color-theme-modules] Now only show ColorTheme::*
